# django-template

./: .gitignore  LICENSE  README.md  TLDR.md  pyproject.toml  rename.py  tailwind.config.js  template.code-workspace
project_template/: .gitignore  .pre-commit-config.yaml  Procfile  README.md  commands.py  commands.py-tpl  manage.py-tpl  project_name.code-workspace  pyproject.toml  pyproject.toml-tpl  {{ project_name }}.code-workspace-tpl
project_template/config/: apis.py-tpl  asgi.py  finders.py  finders.py-tpl  logfilters.py  runners.py-tpl  startup.py-tpl  urls.py-tpl  wsgi.py  wsgi.py-tpl
project_template/config/core/: app.py-tpl  cryptography.py-tpl
project_template/config/routes/: urls.py-tpl
project_template/config/settings/: base.py-tpl  develop.py  develop.py-tpl  development.py-tpl  production.py-tpl  test.py-tpl
project_template/config/urls/: apis.py  apis.py-tpl  converters.py-tpl  patterns.py-tpl  routes.py  routes.py-tpl
project_template/core/: app.py  app.py-tpl  checks.py  checks.py-tpl  pyproject.py  pyproject.py-tpl  typehints.py-tpl
project_template/core/crud/: users.py-tpl
project_template/core/cypher/: tokens.py  tokens.py-tpl
project_template/core/inout/: files.py  files.py-tpl
project_template/core/middlewares/: csrf.py-tpl  decorators.py  decorators.py-tpl
project_template/envs/: develop.env
project_template/notebooks/: debug_api_login.ipynb  develop_with_me.ipynb
project_template/test/: clients.py  clients.py-tpl  factories.py  factories.py-tpl
project_template/test/fixtures/: authentication.py  authentication.py-tpl  clients.py-tpl  users.py-tpl
project_template/test/tests/: conftest.py  conftest.py-tpl  test_user_factory.py-tpl
project_template_cli/: commands.py-tpl  project_name.code-workspace  pyproject.toml
project_template_cli/application/: __init__.py
project_template_cli/config/: base.py  logs.py
project_template_cli/test/: test_cli.py
project_template_django/: .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  TLDR.md  commands.py-tpl  doppler-template.yaml  doppler.yaml  project_name.code-workspace  pyproject.toml
project_template_django/.github/workflows/: bug_to_issues.yml  tbd_to_issue.yml  todo_to_issue.yaml
project_template_django/assets/css/: project_name.css
project_template_django/assets/js/: darkmode-toggle.js
project_template_django/compose/: init.sql  pg_hba.conf  pod.Dockerfile  postgres-and-redis.yml  postgres.Dockerfile  postgres.yml  redis.yml
project_template_django/compose/postgres/: postgres.Dockerfile
project_template_django/config/: asgi.py-tpl  celeryapp.py  gunicorn.py  startup.py-tpl
project_template_django/config/contributors/: aliases.json
project_template_django/config/settings/: __init__.py-tpl  _env.py-tpl  develop.py-tpl  production.py-tpl  test.py-tpl
project_template_django/config/urls/: apis.py-tpl  routes.py-tpl
project_template_django/containers/: postgres-and-redis.yml  postgresql.conf
project_template_django/containers/postgres/: pg_hba.conf
project_template_django/core/: app.py-tpl  checks.py-tpl  conversions.py-tpl  decorators.py-tpl  exceptions.py  gitops.py-tpl  jinja.py  pyproject.py-tpl  setup.py-tpl  typehints.py-tpl
project_template_django/core/accounts/: admin.py-tpl  backends.py-tpl  forms.py-tpl  models.py-tpl  urls.py-tpl  views.py-tpl
project_template_django/core/crud/: users.py-tpl
project_template_django/core/cypher/: security.py-tpl  tokens.py-tpl
project_template_django/core/datetime/: converters.py-tpl
project_template_django/core/exceptions/: guard.py-tpl  io.py-tpl
project_template_django/core/inout/: __init__.py-tpl  directories.py-tpl  files.py-tpl
project_template_django/core/middlewares/: caching.py-tpl  decorators.py-tpl  htmx.py-tpl
project_template_django/core/models/: converters.py-tpl  fields.py-tpl  generics.py-tpl  managers.py-tpl  users.py-tpl
project_template_django/core/templatetags/: customtags.py
project_template_django/core/typehints/: django.py-tpl  generic.py-tpl
project_template_django/core/users/: admin.py-tpl  models.py-tpl
project_template_django/core/views/: generics.py-tpl  mixins.py-tpl
project_template_django/documentation/: CHANGES.md  collaboration.md  how-to-clone-and-ssh.md  how-to-develop.md  index.md  notebooks.md  releases.md  structure.md
project_template_django/documentation/for-architects/: design-defense.md
project_template_django/documentation/for-developers/: basic-setup.md  caching.md  commithooks.md  debugging.md  environment-secrets.md  git.md  how-to-develop.md  how-to-pytest.md  known-bugs.md  notebooks.md  postgres.md  pytest.md
project_template_django/documentation/for-devops/: deployment.md  maintenance.md
project_template_django/documentation/for-enthusiasts/: favourites.md
project_template_django/envs/: develop.env  template.djt  test.env
project_template_django/notebooks/: auth-on-localhost.ipynb  debug_api_login.ipynb  debug_example.ipynb  develop_with_me.ipynb  gogogo_kiss.ipynb  kiss.ipynb  setup.ipynb
project_template_django/notebooks/authentication/: get-an-auth-token-example.ipynb
project_template_django/notebooks/postgres/: connect_raw_sql.ipynb  connect_sql.ipynb
project_template_django/production/: deploy.sh  startup.sh
project_template_django/production/systemd/: app.service  celerybeat.service  celeryflower.service  celeryworker.service
project_template_django/templates/: base.djt.html  base.html  base.html.djt  home.djt.html
project_template_django/templates/admin/: base.html  base_site.html
project_template_django/templates/headers/: desktop-navigation-and-user-menu.djt.html  header-with-navigation.djt.html  mobile-navigation-and-user-menu.djt.html
project_template_django/templates/partials/: darkmode.djt.html  footer.djt.html
project_template_django/terminalui/: terminalui.py-tpl
project_template_django/test/: classes.py  clients.py-tpl  factories.py-tpl  runners.py-tpl
project_template_django/test/factories/: users.py-tpl
project_template_django/test/fixtures/: authentication.py-tpl  (+4 more)
(+153 files in other folders)
