[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["oryon-dominik <oryon@cyberise.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
humanize = "^4.3.0"
pendulum = "^2.1.2"
rich = "^12.5.1"
dill = "^0.3.5.1"
passlib = "^1.7.4"
httpx = "^0.23.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
django-debug-toolbar = "^3.6.0"
django-rich = "^1.4.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.8.0"}
django-stubs-ext = "^0.7.0"
django-widget-tweaks = "^1.4.12"
django-crispy-forms = "^1.14.0"
django-cors-headers = "^3.13.0"
crispy-tailwind = "^0.5.0"
toml = "^0.10.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.develop.dependencies]
black = "^22.8.0"
coverage = "^6.4.4"
django-stubs = "^1.12.0"
djhtml = "^1.5.2"
jupyter = "^1.0.0"
mypy = "^0.971"
pyproject-flake8 = "^5.0.4.post1"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-rich = "^0.1.1"
typer = "^0.6.1"
nb-black = "^1.0.7"
pre-commit = "^2.20.0"
faker = "^16.6.0"
freezegun = "^1.2.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = "-p no:warnings"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git staticfiles docs assets logs media notebooks"

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/*/tests/*", "apps/*/migrations/*"]
command_line = "-m pytest"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | pyproject.toml
  )/
)
'''

[tool.isort]
profile = "black"

[tool.flake8]
statistics = "True"
extend-ignore = [
  "D203",  # 1 blank line required before class docstring
  "W503",  # line break before binary operator
  "E203",  # whitespace before ':' - for black compatibility
]
exclude = '''
    **/migrations/*,
    .git,
    '''
max-line-length = 119

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.develop"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
