[project]
# BUG: until poetry supports a [PEP 621](https://peps.python.org/pep-0621/)
# compliant [project section](https://github.com/python-poetry/poetry/issues/3332)
# we need to duplicate the project information here.
name = "{{ project_name }}"
version = "0.0.1"
description = ""
authors = [
    # {name = ..., email = ...},
]
maintainers = []
dependencies = [
    # ...
]
requires-python = ">=3.11"
readme = "README.md"
# license = {file = "LICENSE.txt", classifier = "proprietary"}
[project.optional-dependencies]
test = [
  "pytest > 7",
]
# ...

# [project.urls] ...
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[tool.poetry]
name = "{{ project_name }}"
version = "0.0.1"
description = ""
authors = ["see CONTRIBUTORS.txt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
Django = "^4.2"
django-cors-headers = "^3.13.0"
django-csp = "^3.7"
django-permissions-policy = "^4.16.0"
django-extensions = "^3.2.1"
django-rich = "^1.4.0"
msgspec = "^0.13.1"
gitpython = "^3.1.31"
tomlkit = "^0.11.8"
jinja2 = "^3.1.2"
contributors-txt = "^1.0.0"

[tool.poetry.group.django]
optional = false
[tool.poetry.group.django.dependencies]
django-template-partials = "^23.3.post1"
django-readers = "^2.1.1"
# django-hatchway = "^0.5.1"  # FIXME: deactivated due to pydantic support < 2
django-widget-tweaks = "^1.4.12"
django-crispy-forms = "^1.14.0"
crispy-tailwind = "^0.5.0"

[tool.poetry.group.cli]
optional = false
[tool.poetry.group.cli.dependencies]
typer = "^0.9.0"

[tool.poetry.group.test]
optional = false
[tool.poetry.group.test.dependencies]
coverage = "^6.4.4"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-rich = "^0.1.1"
pytest-cov = "^4.1.0"
pytest-vcr = "^1.0.2"
pytest-instafail = "^0.5.0"
hypothesis = {extras = ["django"], version = "^6.82.0"}
faker = "^16.6.0"
freezegun = "^1.2.2"

[tool.poetry.group.commithooks]
optional = false
[tool.poetry.group.commithooks.dependencies]
djhtml = "^1.5.2"
pre-commit = "^2.20.0"

[tool.poetry.group.linter]
optional = false
# run ruff with: poetry run ruff check .
# run flake8 with: poetry run flake8
[tool.poetry.group.linter.dependencies]
ruff = "^0.0.260"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.formatter]
optional = false
# run black with: poetry run black check .
# run isort with: poetry run isort .
[tool.poetry.group.formatter.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"

[tool.poetry.group.typechecker]
optional = false
# run mypy with: poetry run mypy --config-file pyproject.toml .
[tool.poetry.group.typechecker.dependencies]
mypy = "1.5.1"
types-toml = "^0.10.8.6"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.4"}
django-stubs-ext = "^4.2.2"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.3"}

[tool.poetry.group.debugging]
optional = false
[tool.poetry.group.debugging.dependencies]
jupyter = "^1.0.0"
django-debug-toolbar = "^3.6.0"

[tool.poetry.group.paragons]
optional = false
[tool.poetry.group.paragons.dependencies]
humanize = "^4.3.0"
pendulum = "^2.1.2"
dill = "^0.3.5.1"
passlib = "^1.7.4"
httpx = "^0.23.0"  # also used in some jupyter dev-notebooks

[tool.poetry.group.postgres]
optional = true
[tool.poetry.group.postgres.dependencies]
psycopg = {extras = ["binary"], version = "^3.1.12"}

[tool.poetry.group.authentication]
optional = true
[tool.poetry.group.authentication.dependencies]
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.restframework]
optional = true
[tool.poetry.group.restframework.dependencies]
djangorestframework = "^3.14.0"

[tool.poetry.group.celery]
optional = true
[tool.poetry.group.celery.dependencies]
celery = "^5.3.4"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"

[tool.poetry.group.redis]
optional = true
[tool.poetry.group.redis.dependencies]
redis = "^5.0.1"
django-redis = "^5.4.0"

[tool.poetry.group.environment]
optional = false
[tool.poetry.group.environment.dependencies]
environs = "^9.5.0"
rich = "^13.6.0"
# TODO: Add textual, when the terminalui is finished.
# textual = "^0.38.1"
doppler-env = "^0.3.1"

[tool.poetry.group.gittools]
optional = true
[tool.poetry.group.gittools.dependencies]
git-fame = "^2.0.1"

[tool.poetry.group.tailwindcss]
optional = false
[tool.poetry.group.tailwindcss.dependencies]
django-tailwind-cli = "^2.7.0"

[tool.poetry.group.vite]
optional = true
[tool.poetry.group.vite.dependencies]
django-vite = "^2.0.2"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = "-m 'not slow' -p no:warnings --instafail --vcr-record=none --cov"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git staticfiles docs assets logs media notebooks temp"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["apps"]
omit = ["apps/*/tests/*", "apps/*/migrations/*"]
command_line = "-m pytest"

[tool.ruff]
line-length = 199

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | pyproject.toml
  )/
)
'''

[tool.isort]
profile = "black"
line_length=119
multi_line_output = 3
include_trailing_comma = true
split_on_trailing_comma = true  # black compatible
no_inline_sort = true
no_lines_before = ["future", "stdlib"]
combine_star = true
lines_between_types = 0
lines_after_imports = 2
lines_between_sections = 1
skip = [
  '.eggs',
  '.git',
  '.mypy_cache',
  '.venv',
  '_build',
  'build',
  'dist',
  'node_modules',
  'venv'
]
skip_glob = [
  "*/node_modules/*",
  "*/config/settings/*.py",
]
extend_skip = [".md", ".json"]
default_section = "THIRDPARTY"
known_first_party = ["config", "core", "test", "apps"]
src_paths = ["config", "core", "test", "apps", "manage.py"]
known_django = "django"
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.flake8]
statistics = "True"
extend-ignore = [
  "E203",  # whitespace before ':' - for black compatibility
]
per-file-ignores = [
  "config/settings/base/__init__.py:F401",
  "config/settings/base/thirdparty/__init__.py:F401",
  "config/settings/base/{{ project_name }}/__init__.py:F401",
  "config/settings/develop.py:F405",
  "config/settings/production.py:F405",
  "config/settings/test.py:F405",
]
exclude = '''
    **/migrations/*,
    .git,
    '''
max-line-length = 199

[tool.mypy]
ignore_missing_imports = true
ignore_missing_imports_per_module = true
warn_unused_ignores = false
namespace_packages = true
explicit_package_bases = true
plugins = ["mypy_django_plugin.main"] #, "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.develop"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[template]
repository = "https://github.com/oryon-dominik/django-template"
templateused = "project_template_django"
